# features-cpp

./: .clang-format  .gitignore  README.md  _benchmark.sh  all_cat_plot.sh  all_plot.sh  asm_prettify.sh  bench_prettify.sh  compile_commands.json  features_list.sh  gen_bench.sh  join.sh  list1.sh  meson.build  new_feature.sh  plot.sh  regen.sh  regen_all_feature.sh  regen_all_feature_.sh  regex_plot.sh  start.sh
access_specifier/: bench.cpp  meson.build
access_specifier/include/: lib.h
access_specifier/src/: main.cpp  perf.cpp
basics/: bench.cpp  meson.build
basics/include/: lib.h
basics/src/: lib.cpp  main.cpp  perf.cpp
class_member_funcion/: bench.cpp  meson.build
class_member_funcion/include/: lib.h
class_member_funcion/src/: lib.cpp  main.cpp  perf.cpp
common/: bench.cpp  meson.build
common/include/: lib.h
common/src/: lib.cpp
lambda_fns/: bench.cpp  meson.build
lambda_fns/include/: lib.h
lambda_fns/src/: lib.cpp  main.cpp  perf.cpp
multi_inherit/: bench.cpp  meson.build
multi_inherit/include/: lib.h
multi_inherit/src/: lib.cpp  main.cpp  perf.cpp
non_standard_member_vars/: bench.cpp  meson.build
non_standard_member_vars/include/: lib.h
non_standard_member_vars/src/: lib.cpp  main.cpp  perf.cpp
poly/: bench.cpp  meson.build
poly/include/: lib.h
poly/src/: lib.cpp  main.cpp  perf.cpp
rvo/: bench.cpp  meson.build
rvo/include/: lib.h
rvo/src/: lib.cpp  main.cpp  perf.cpp
stl_vector/: bench.cpp  meson.build
stl_vector/include/: lib.h
stl_vector/src/: lib.cpp  main.cpp  perf.cpp
trivial_type/: bench.cpp  meson.build
trivial_type/include/: lib.h
trivial_type/src/: lib.cpp  main.cpp  perf.cpp
try_catch_exception/: bench.cpp  meson.build
try_catch_exception/include/: lib.h
try_catch_exception/src/: lib.cpp  main.cpp  perf.cpp
virtual_base_class/: bench.cpp  diamond.plantuml  meson.build  non_diamond.plantuml
virtual_base_class/include/: lib.h
virtual_base_class/src/: main.cpp  perf.cpp
